--- a/core/templates/core/project_delete.html
+++ b/core/templates/core/project_delete.html
@@ -7,7 +7,7 @@ Delete project
 
 {% block body %}
 <div class="container graybg">
-    <h5>Are you sure you want to detete project <i class="emph">{{project}}</i>?</h5><br> 
+    <h5>Are you sure you want to delete project <i class="emph">{{project}}</i>?</h5><br> 
     <form action="{% url 'core:project_delete' pk=pk %}" method="POST">
         {% csrf_token %}
             <input class="btn btn-danger btn-sm" type="submit" name="delete" value="Yes, I'm sure">
