KRONOS-535 Changed library ID format,added library type in projects page and tenx libraries in the dropdown menu

--- a/core/templates/core/library_list.html
+++ b/core/templates/core/library_list.html
@@ -61,6 +61,8 @@
                             <a href="{% url library_type|add:':library_detail' pk=library.pk %}">
                                 {% if library_type == 'dlp' %}
                                     {{ library.pool_id }}
+                                {% elif library_type == 'tenx' %}
+                                    {{library.get_id}}
                                 {% else %}
                                     {{ library.id }}
                                 {% endif %}
