COLO-9 Updated GSC submission form to follow new template

--- a/templates/template_gsc_data_header.html
+++ b/templates/template_gsc_data_header.html
@@ -38,7 +38,7 @@ Analyte Information (For unpooled Libraries only):
 
 Library Information:
     "Library Type\n(e.g. Genome, exome, transcriptome amplicon, ChIP, etc.)": ["Enter the type of library that you are submitting e.g. genome, exome, transcriptome, ChIP etc.", False]
-    Library Construction Method: ["Enter the method you used to construct the library.", False]
+    Library Construction Method (if different from pool) : ["Enter the method you used to construct the library.", False]
     Size Range (bp): ["Enter the size range in bp.", False]
     Average Size (bp): ["None", False]
     Chromium Sample Index Name: ["Please refer to the links provided in Rows 36-37.", True]
@@ -51,6 +51,10 @@ Additional Information for ChIP Constructed Libraries:
     Crosslinking Time: ["If your library is a ChIP constructed library, enter the crosslinking time (e.g. 10min).", False]
     Sonication Time: ["If your library is a ChIP constructed library, enter the sonication time including the units (e.g. 20min).", False]
     Antibody Used: ["If your library is a ChIP constructed library, enter the name of the antibody used.", False]
-    Antibody catalogue Number: ["If your library is a ChIP constructed library, enter the catalogue # of the antibody that was used.", False]
+    Antibody catalogue number: ["If your library is a ChIP constructed library, enter the catalogue # of the antibody that was used.", False]
+    Antibody Lot number: ["Provide the antibody lot #.",False]
     Antibody Vendor: ["If your library is a ChIP constructed library, enter the name of the vendor from whom you purchased the antibody.", False]
-    Amount of Antibody Used: ["If your library is a ChIP constructed library, enter the amount of antibody used including the units.", False]
+    Amount of Antibody Used(ug): ["Enter the amount of antibody used in ug", False]
+    Amount of Bead Used(ul): ["Indicate the amoung of bead used, in ul.", False]
+    Bead Type: ["Indicate the type of bead used.", False]
+    Amount of Chromatin Used(ug): ["Please provide the amount of chromatin used per IP, in ug.",False]
