--- a/templates/template_gsc_meta_header.html
+++ b/templates/template_gsc_meta_header.html
@@ -11,7 +11,8 @@ Analyte Information:
 
 Library Information:
     "Library Type\n(e.g. Genome, exome, transcriptome amplicon, ChIP, etc.)": ["Enter the type of library that you are submitting e.g. genome, exome, transcriptome, ChIP etc.", False]
-    Library Construction Method: ["Enter the method you used to construct the library.", False]
+    "NON Chromium / Single Cell\nLibraries-Library Construction Method": ["Enter the method you used to construct the library. Not for chromium or single cell libraries - please use the next column"]
+    "Chromium/Single Cell\nLibraries-Library Construction Method": ["Please select from the drop-down menu.", False]
     Size Range (bp): ["Enter the size range in bp.", False]
     Average Size (bp): ["None", False]
     Number of libraries in pool: ["If the library being submitted is pooled, enter pooling details here (e.g. the number of libraries in the pool).", False]
