COLO-28 Added sftp path and tantalus path in api

--- a/sisyphus/templates/sisyphus/dlpanalysisinformation_detail.html
+++ b/sisyphus/templates/sisyphus/dlpanalysisinformation_detail.html
@@ -53,8 +53,8 @@
             <td id="tdid" >{{ object.sftp_path }}</td>
         </tr>
             <tr>
-            <th id="thid">Tantalus Path:</th>
-            <td id="tdid" >{{ object.tantalus_path }}</td>
+            <th id="thid">Blob Path:</th>
+            <td id="tdid" >{{ object.blob_path }}</td>
         </tr>
         {% for field, value in object.get_field_values.items %}
         <tr>
