Typo : Fixed jira link in dlpanalysisinformation_detail.html

--- a/sisyphus/templates/sisyphus/dlpanalysisinformation_detail.html
+++ b/sisyphus/templates/sisyphus/dlpanalysisinformation_detail.html
@@ -22,7 +22,7 @@
         </tr>
         <tr>
             <th id="thid">Analysis Jira Ticket:</th>
-            <td id="tdid" ><a href="https://www.bcgsc.ca/jira/browse/{{object.analysis_jira_tickett}}">{{object.analysis_jira_ticket}}</a></td>
+            <td id="tdid" ><a href="https://www.bcgsc.ca/jira/browse/{{object.analysis_jira_ticket}}">{{object.analysis_jira_ticket}}</a></td>
         </tr>
         <tr>
             <th id="thid">Analysis Submission Date:</th>
