--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -1,7 +1,7 @@
 {% extends "admin/base_site.html" %}
 
 {% block title %}
-ElasitcDjango Database Administration
+ElasticDjango Database Administration
 {% endblock %}
 
 {% block branding %}
