--- a/sisyphus/templates/sisyphus/analysisinformation_create.html
+++ b/sisyphus/templates/sisyphus/analysisinformation_create.html
@@ -42,8 +42,9 @@
             </thead>
         </table>
      </fieldset>
-    <input class="btn btn-primary btn-sm" type="submit" name="create" value="Create">
-        <a class="btn btn-default btn-sm" href="{% url 'sisyphus:analysisinformation_list' %}">Cancel</a>
+    <button type="submit" name="create" value="CreateRun" class="btn btn-primary btn-sm">Create and run</button>
+    <button type="submit" name="create" value="Create" class="btn btn-primary btn-sm">Create and run later</button>
+    <a class="btn btn-default btn-sm" href="{% url 'sisyphus:analysisinformation_list' %}">Cancel</a>
     </form>
 </div>
 {% endblock %}
