--- a/core/templates/core/library_detail.html
+++ b/core/templates/core/library_detail.html
@@ -44,15 +44,19 @@
             <td id="tdid" class="notes">{{ library.projects.all|join:", " }}</td>
         </tr>
         <tr>
-            <th id="thid">Relates to:</th>
+            <th id="thid">Relates to (DLP):</th>
             <td id="tdid">
-
-            {% for lib in library.relates_to.only %}
-                <a href="{{ lib.get_absolute_url }}">{{ lib }}</a>
-
-                <br>
-            {% endfor %}
-
+                {% for lib in library.relates_to_dlp.all %}
+                    <a href="{{ lib.get_absolute_url }}">{{ lib }}</a><br>
+                {% endfor %}
+            </td>
+        </tr>
+        <tr>
+            <th id="thid">Relates to (10x):</th>
+            <td id="tdid">
+                {% for lib in library.relates_to_tenx.all %}
+                    <a href="{{ lib.get_absolute_url }}">{{ lib }}</a><br>
+                {% endfor %}
             </td>
         </tr>
     </table>
