--- a/templates/base_view.html
+++ b/templates/base_view.html
@@ -51,7 +51,7 @@
                         <form name="search-form" class="navbar-form navbar-right" action="{% url 'search' %}" role="search">
                             <div class="form-group right-inner-addon">
                                 <i class="icon-search"></i>
-                                <input type="text" name="query_str" class="form-control" placeholder="Search..." />
+                                <input type="text" name="query_str" class="form-control" placeholder="Enter Sample ID" />
                             </div>
                         </form>
                     </ul>
