--- a/templates/messages_display.html
+++ b/templates/messages_display.html
@@ -1,19 +1,21 @@
 {% if messages %}
-<!--     <div class='messages'>
- -->
+    <!-- <div class='messages'> -->
     <ul class="messages" style="list-style: none;">
-    {% for message in messages %}
-    <li class="{{ message.tags }}">
-        {% if "success" in message.tags %}
-        <i class="fa fa-check" aria-hidden="true"></i>
-        {% elif "warning" in message.tags %}
-        <i class="fa fa-exclamation" aria-hidden="true"></i>
-        {% elif "error" in message.tags %}
-        <i class="fa fa-times" aria-hidden="true"></i>
-        {% endif %}
-        {{message}}
-    </li>
-    {% endfor %}
+
+        {% for message in messages %}
+            <li class="{{ message.tags }}">
+
+                {% if "success" in message.tags %}
+                    <i class="fa fa-check" aria-hidden="true"></i>
+                {% elif "warning" in message.tags %}
+                    <i class="fa fa-exclamation" aria-hidden="true"></i>
+                {% elif "error" in message.tags %}
+                    <i class="fa fa-times" aria-hidden="true"></i>
+                {% endif %}
+
+                {{message}}
+            </li>
+        {% endfor %}
     </ul>
 
     <!-- </div> -->
